--- a/src/css/state/crash.css
+++ b/src/css/state/crash.css
@@ -1,12 +1,22 @@
 .crash-screen {
   background-color: #000;
   font-family: "unifont";
-  white-space: pre;
+
   opacity: 0;
   animation: crash-show 0s linear forwards;
   animation-delay: 1s;
   transition: none !important;
   font-size: 16px;
+}
+
+.crash-screen p#crashText {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  white-space: pre;
 }
 
 @keyframes crash-show {
