--- a/src/css/window.css
+++ b/src/css/window.css
@@ -1,8 +1,9 @@
 @import url("./window/core.css");
 @import url("./window/titlebar.css");
+@import url("./window/controls.css");
+@import url("./window/body.css");
 
 div.window:not(.core) {
-  --titlebar-height: 30px;
   position: fixed;
   color: var(--fg);
   background-color: var(--win-bg);
@@ -24,7 +25,7 @@ div.window *::selection {
 
 div:not(.noani) div.window:not(.core) {
   transition: all 0.3s, z-index 0s, pointer-events 0s, transform 0s,
-    backdrop-filter 0s, width 0s, height 0s;
+    backdrop-filter 0s, width 0s, height 0s, translate 0s;
 }
 
 div.window:not(.core).visible:not(.closing) {
