Port some more stuff, begin working on the boot screen

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 @import url("https://unpkg.com/lucide-static@latest/font/lucide.css");
 @import url("./window.css");
 @import url("./progressbar.css");
@@ -11,7 +12,7 @@ body {
   background-color: #000;
   margin: 0;
   overflow: hidden;
-  font-family: "Open Sans";
+  font-family: "Nunito Sans";
   font-size: 14px;
 }
 
