--- a/src/css/apps/core/loginapp.css
+++ b/src/css/apps/core/loginapp.css
@@ -7,6 +7,175 @@ div.window#loginApp div.body {
   background-size: cover;
 }
 
+div.window#loginApp button:not(.continue) {
+  padding: 12px 20px;
+  background-color: #fff1;
+  border: none;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  transition: scale 0.2s, background-color 0.3s;
+  border: var(--button-glass-bg) 1px solid;
+}
+
+div.window#loginApp button:not(.continue):hover {
+  background-color: #fff2;
+}
+
+div.window#loginApp button:not(.continue):active {
+  /* opacity: 0.7; */
+  scale: 0.95;
+}
+
+div.window#loginApp div.container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 40px;
+}
+
+div.window#loginApp div.container img.profile-picture {
+  height: 150px;
+  border-radius: 50%;
+}
+
+div.window#loginApp div.container div.field {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  height: 42px;
+  border-radius: 10px;
+  background-color: #fff1;
+  border: #fff2 1px solid;
+  overflow: hidden;
+  backdrop-filter: blur(10px);
+  margin-bottom: 10px;
+}
+
+div.window#loginApp div.container div.field:last-child {
+  margin-bottom: 0;
+}
+
+div.window#loginApp div.container div.field div.lucide {
+  width: 41px;
+  height: 40px;
+  border-right: #fff2 1px solid;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div.window#loginApp div.container div.field input {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  flex-grow: 1;
+  padding: 0 10px;
+  height: 40px;
+}
+
+div.window#loginApp div.login-form {
+  display: flex;
+  align-items: end;
+  gap: 10px;
+  width: 250px;
+}
+
+div.window#loginApp div.login-form button.continue {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  padding: 0;
+  border: none;
+  background-color: #fff3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  backdrop-filter: blur(10px);
+  transition: background-color 0.3s, opacity 0.3s;
+}
+
+div.window#loginApp div.login-form button.continue:hover:not(:disabled) {
+  background-color: #fff5;
+}
+
+div.window#loginApp div.login-form button.continue:disabled,
+div.window#loginApp div.login-form button.continue:active {
+  opacity: 0.5;
+}
+
+div.window#loginApp p.error-message {
+  font-size: 16px;
+}
+
+div.window#loginApp p.loading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
+}
+
+div.window#loginApp div.topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  width: calc(100% - 20px);
+  height: 40px;
+  background-color: var(--button-glass-active-bg);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 0 15px;
+  padding-right: 5px;
+  transition: translate 0.3s;
+}
+div.window#loginApp div.topbar.hide {
+  translate: 0 -50px;
+}
+
+div.window#loginApp div.topbar div.version {
+  opacity: 0.5;
+}
+
+div.window#loginApp div.topbar div.time {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  pointer-events: none;
+  font-weight: bold;
+}
+
+div.window#loginApp div.topbar div.actions button {
+  width: 30px;
+  height: 30px;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  border-radius: 50%;
+  backdrop-filter: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.window#loginApp div.topbar div.actions button:hover {
+  background-color: var(--button-glass-bg);
+}
+
+div.window#loginApp div.topbar div.actions button:active {
+  background-color: var(--button-glass-active-bg);
+}
+
 div.window#loginApp div.lock-screen {
   position: fixed;
   top: 0;
@@ -20,11 +189,14 @@ div.window#loginApp div.lock-screen {
   background-image: url("../../../assets/bg/img15.jpg");
   background-position: center;
   background-size: cover;
-  transition: translate 0.5s;
+  transition: translate 0.5s, opacity 0s, pointer-events 0s;
 }
 
 div.window#loginApp div.lock-screen.hide {
   translate: 0 -100vh;
+  opacity: 0;
+  pointer-events: none;
+  transition: translate 0.5s, opacity 0.3s 0.7s, pointer-events 0s;
 }
 
 div.window#loginApp div.lock-screen h1 {
