Create the initial setup state & app

--- a/src/css/themes/dark.css
+++ b/src/css/themes/dark.css
@@ -1,6 +1,6 @@
 :root,
 :root .theme-dark {
-  --fg: #ccc;
+  --fg: #ddd;
   --win-bg: #1e1e1e;
   --win-border-rad: 10px;
   --win-border: #393939 1px solid;
