Let's get a desktop

--- a/src/css/window/core.css
+++ b/src/css/window/core.css
@@ -1,5 +1,5 @@
 div.window.core {
-  background-color: #000;
+  /* background-color: #000; */
   min-width: unset;
   min-height: unset;
   max-width: unset;
