--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -1,20 +1,19 @@
-#arcShell,
-#arcShell div.body,
-#arcShell div.shell {
+@import url("../../main.css");
+div.shell {
   pointer-events: none;
 }
 
-#arcShell div.shell {
+div.shell {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-#arcShell div.shell * {
+div.shell * {
   pointer-events: initial;
 }
 
-#arcShell div.shell div.primary {
+div.shell div.primary {
   height: calc(100% - 50px);
   max-height: calc(100% - 50px);
   overflow: hidden;
@@ -24,30 +23,34 @@
   padding: 10px;
 }
 
-#arcShell div.shell div.secondary {
+div.shell div.secondary {
   z-index: 10000;
   position: relative;
 }
 
-#arcShell div.shell div.taskbar {
+div.shell div.taskbar {
   display: flex;
   align-items: center;
   width: calc(100% - 20px);
-  height: 40px;
+  height: 50px;
   margin: 10px;
+  padding: 5px;
   margin-top: 0;
-  gap: 10px;
+  gap: 5px;
   z-index: 100;
   background-color: var(--glass-bg);
-  border-radius: 8px;
+  border-radius: 10px;
+  border: var(--win-border);
+
+  backdrop-filter: blur(10px);
 }
 
-#arcShell div.shell.docked div.taskbar {
+div.shell.docked div.taskbar {
   width: 100%;
   margin: 0;
 }
 
-#arcShell div.shell div.taskbar > button {
+div.shell div.taskbar > button {
   height: 40px;
   width: 40px;
   padding: 0;
@@ -58,32 +61,31 @@
   background-color: var(--button-glass-bg);
 }
 
-#arcShell div.shell div.taskbar div.opened-apps {
+div.shell div.taskbar div.opened-apps {
   background-color: var(--button-glass-bg);
   flex-grow: 1;
-  height: inherit;
+  height: 40px;
   border-radius: 8px;
-  backdrop-filter: blur(10px);
 }
 
-#arcShell div.shell div.taskbar button.start-button img {
+div.shell div.taskbar button.start-button img {
   height: 30px;
 }
 
-#arcShell div.shell div.taskbar button.action-center-button span {
+div.shell div.taskbar button.action-center-button span {
   font-size: 16px;
 }
 
-#arcShell div.shell div.taskbar div.system-area {
+div.shell div.taskbar div.system-area {
   background-color: var(--button-glass-bg);
-  height: inherit;
+  height: 40px;
   display: flex;
   align-items: center;
   padding: 0 15px;
   border-radius: 8px;
 }
 
-#arcShell div.shell div.startmenu {
+div.shell div.startmenu {
   width: 420px;
   height: 490px;
   background-color: var(--glass-bg);
@@ -91,23 +93,21 @@
   transition: translate 0.3s, opacity 0.3s, pointer-events 0s;
   z-index: 10;
   border: var(--win-border);
-  backdrop-filter: blur(10px);
   max-height: 100%;
 }
 
-#arcShell div.shell div.startmenu:not(.opened) {
+div.shell div.startmenu:not(.opened) {
   translate: 0 50px;
   opacity: 0;
   pointer-events: none !important;
 }
 
-#arcShell div.shell div.actioncenter {
+div.shell div.actioncenter {
   width: 400px;
   height: 100%;
   background-color: #f0f;
   background-color: var(--glass-bg);
   border-radius: 10px;
   border: var(--win-border);
-  backdrop-filter: blur(10px);
   max-height: 100%;
 }
