--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -1,16 +1,21 @@
-@import url("../../main.css");
-div.shell {
+#arcShell {
+  z-index: 1000000000000000000000000000000000000000 !important;
+  pointer-events: none !important;
+}
+
+#arcShell * {
   pointer-events: none;
 }
 
 div.shell {
+  pointer-events: none;
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-div.shell * {
-  pointer-events: initial;
+div.shell > div * {
+  pointer-events: initial !important;
 }
 
 div.shell div.primary {
@@ -50,9 +55,10 @@ div.shell.docked div.taskbar {
   margin: 0;
 }
 
-div.shell div.taskbar > button {
+#arcShell div.shell div.taskbar > button {
   height: 40px;
   width: 40px;
+  min-width: 40px;
   padding: 0;
   margin: 0;
   display: flex;
@@ -66,10 +72,50 @@ div.shell div.taskbar div.opened-apps {
   flex-grow: 1;
   height: 40px;
   border-radius: 8px;
+  padding: 3px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+div.shell div.taskbar div.opened-apps::-webkit-scrollbar {
+  height: 1px;
+  width: 1px;
+}
+
+#arcShell div.shell div.taskbar div.opened-apps button {
+  display: inline-flex;
+  max-width: 180px;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+  padding: 0 10px;
+  height: 34px;
+}
+
+#arcShell div.shell div.taskbar div.opened-apps button + button {
+  margin-left: 3px;
+}
+
+div.shell div.taskbar div.opened-apps button img {
+  height: 24px;
+}
+
+#arcShell div.shell div.taskbar div.opened-apps button.active,
+#arcShell div.shell div.taskbar button.start-button.active {
+  background-color: var(--button-glass-bg);
 }
 
 div.shell div.taskbar button.start-button img {
   height: 30px;
+}
+
+#arcShell div.shell div.taskbar button.action-center-button.active {
+  background-color: var(--accent-light);
+}
+
+#arcShell div.shell div.taskbar button.action-center-button.active span {
+  color: var(--win-bg);
 }
 
 div.shell div.taskbar button.action-center-button span {
@@ -85,15 +131,46 @@ div.shell div.taskbar div.system-area {
   border-radius: 8px;
 }
 
+div.shell div.taskbar > *:not(.opened-apps) {
+  min-width: fit-content;
+}
+
+div.shell div.taskbar div.pinned-apps {
+  height: 40px;
+  padding: 3px;
+  background-color: var(--button-glass-bg);
+  border-radius: 8px;
+}
+
+div.shell div.taskbar div.pinned-apps img {
+  height: 24px;
+}
+
+div.shell div.taskbar div.pinned-apps > button {
+  width: 34px;
+  height: 34px;
+  padding: 0;
+  margin: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+
+div.shell div.taskbar div.pinned-apps > button + button {
+  margin-left: 3px;
+}
+
 div.shell div.startmenu {
   width: 420px;
   height: 490px;
   background-color: var(--glass-bg);
   border-radius: 10px;
-  transition: translate 0.3s, opacity 0.3s, pointer-events 0s;
+  transition: translate 0.3s, opacity 0.2s, pointer-events 0s;
   z-index: 10;
   border: var(--win-border);
   max-height: 100%;
+  backdrop-filter: blur(10px);
 }
 
 div.shell div.startmenu:not(.opened) {
@@ -110,4 +187,14 @@ div.shell div.actioncenter {
   border-radius: 10px;
   border: var(--win-border);
   max-height: 100%;
+  translate: 400px 0;
+  opacity: 0;
+  transition: translate 0.3s, opacity 0.2s;
+  backdrop-filter: blur(10px);
+}
+
+div.shell div.actioncenter.opened {
+  translate: 0;
+  opacity: 1;
+  pointer-events: initial;
 }
