--- a/src/css/apps/components/shell/startmenu.css
+++ b/src/css/apps/components/shell/startmenu.css
@@ -36,6 +36,14 @@ div.shell div.startmenu div.top div.folders button {
   background-color: transparent;
 }
 
+div.shell div.startmenu div.top div.folders > div.content {
+  border-top: var(--button-glass-bg) 1px solid;
+  margin-top: 5px;
+  padding-top: 5px;
+  height: calc(100% - 40px);
+  overflow-y: scroll;
+}
+
 div.shell div.startmenu div.top div.folders button:hover {
   background-color: var(--button-glass-bg);
 }
@@ -48,9 +56,12 @@ div.shell div.startmenu div.top div.folders button.user-button {
   font-weight: bold;
 }
 
+div.shell div.startmenu div.top div.folders button.user-button img {
+  border-radius: 12px;
+}
+
 div.shell div.startmenu div.top div.folders button img {
   height: 24px;
-  border-radius: 12px;
 }
 
 div.shell div.startmenu div.top div.app-list {
