--- a/src/css/themes/dark.css
+++ b/src/css/themes/dark.css
@@ -15,7 +15,7 @@
   --startmenu-applist-item-bg: transparent;
   --startmenu-applist-item-bg-hover: #ffffff05;
   --startmenu-applist-item-bg-active: #0001;
-  --button-border-rad: 7.5px;
+  --button-border-rad: 8px;
   --button-bg: #282828;
   --button-hover-bg: #3a3a3a;
   --button-active-bg: #111;
@@ -39,7 +39,7 @@
 :root {
   --accent: dodgerblue;
   --accent-dark: rgb(0, 94, 126);
-  --accent-light: rgb(113, 220, 255);
+  --accent-light: #80dfff;
   --accent-darkest: rgb(0, 46, 61);
   --elevated-accent-filter: brightness(300%) saturate(150%);
 }
