begin action center

--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -35,6 +35,7 @@ div.shell div.primary {
   grid-template-columns: 420px auto 400px;
   align-items: end;
   padding: 10px;
+  position: relative;
 }
 
 div.shell div.secondary {
