--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -227,6 +227,7 @@ div.shell
 }
 
 div.shell div.actioncenter div.top div.card-stack div.card.gallery {
+  background-color: var(--button-glass-bg);
   background-image: var(--src);
   background-position: center;
   background-size: cover;
