--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -1,5 +1,7 @@
 @import url("./actioncenter/clock.css");
 @import url("./actioncenter/cardstack.css");
+@import url("./actioncenter/notifications.css");
+@import url("./actioncenter/quicksettings.css");
 
 div.shell div.actioncenter {
   position: absolute;
@@ -17,6 +19,9 @@ div.shell div.actioncenter {
   backdrop-filter: blur(10px);
   box-shadow: 0 5px 15px 5px #0003;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 div.shell div.actioncenter.opened {
@@ -30,6 +35,7 @@ div.shell div.actioncenter div.top {
   align-items: center;
   gap: 10px;
   height: 110px;
+  min-height: 110px;
 }
 
 div.shell div.actioncenter div.top > div {
