--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -2,6 +2,7 @@
 @import url("./shell/taskbar.css");
 @import url("./shell/startmenu.css");
 @import url("./shell/pushnotification.css");
+@import url("./shell/colored.css");
 
 #arcShell {
   z-index: 1000000000000000000000000000000000000000 !important;
