--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -8,3 +8,24 @@ div.desktop-wallpaper {
   background-size: cover;
   height: 100%;
 }
+
+div.desktop-wallpaper::after {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: fit-content;
+  content: "This is pre-release software";
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: 2px 2px #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 0 20vw; */
+  white-space: wrap;
+  box-sizing: border-box;
+  text-align: center;
+  pointer-events: none;
+  padding: 15px 0;
+}
